<resources>
    <string name="app_name">Money Life</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_loans">Préstamos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_turn">Turno</string>
    <string name="tv_week_number">Semana %1$d</string>
    <string name="fab_next_turn_title">Terminar Turno</string>
    <string name="tv_income_title">Ingresos Mensuales</string>
    <string name="tv_money">$ %1$.2f</string>
    <string name="tv_money_int">$ %1$d.00</string>
    <string name="tv_balance_title">Saldo en Efectivo</string>
    <string name="tv_expenses_title">Egresos Mensuales</string>
    <string name="card_invest_title">Inversión</string>
    <string name="card_fun_title">Diversión</string>
    <string name="card_laboral_title">Laborales</string>
    <string name="card_personal_property_title">Bienes</string>
    <string name="card_happiness_title">Felicidad</string>
    <string name="tv_happiness_amount">%1$.2f %%</string>
    <string name="login_error">Ha ocurrido un error</string>
    <string name="login_button">iniciar login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="signup_button">Crear Cuenta</string>
    <string name="go_to_login_button">Ya tienes una cuenta? Inicia sesión</string>
    <string name="go_to_signup_button">No tienes una cuenta? Crear cuenta</string>
    <string name="amount_placeholder">Monto</string>
    <string name="invest_button">INVERTIR</string>
    <string name="withdraw_button">RETIRAR</string>
    <string name="withdraw_all_button">RETIRAR TODO</string>
    <string name="title_health">Salud Emocional</string>
    <string name="fab_new_investment_text">NUEVA INVERSION</string>
    <string name="title_investments">Inversiones</string>
    <string name="cancel_button">cancelar</string>
    <string name="title_news">Noticias</string>
    <string name="news">Noticia</string>
    <string name="news_date">Turno %1$d</string>
    <string name="empty_news">No hay noticias que mostrar</string>
    <string name="min_stock_error_message">Debes comprar un mínimo de 100 acciones</string>
    <string name="available_investments">Prestamos Disponibles</string>
    <string name="active_loands">Prestamos Activos</string>
    <string name="pay_button">PAGAR</string>
    <string name="cant_pay_more_than_max">No puedes pagar mas del balance restante</string>
    <string name="button_apply">APLICAR</string>
    <string name="placeholder_deposit">Enganche</string>
    <string name="interest_rate_label">Tasa de interés:</string>
    <string name="button_apply_for_loan">SOLICITAR</string>
    <string name="duration_label">Duracion:</string>
    <string name="dialog_pay_loan_description">Pago anticipado de deuda (total o parcial)</string>
</resources>