<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_turn">

    <fragment
        android:id="@+id/navigation_turn"
        android:name="com.prometheo.moneylife.ui.turn.TurnFragment"
        android:label="@string/title_turn"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.prometheo.moneylife.ui.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.prometheo.moneylife.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_investments"
        android:name="com.prometheo.moneylife.ui.investments.CurrentInvestmentsFragment"
        android:label="@string/title_investments"
        tools:layout="@layout/fragment_current_investments" />

    <fragment
        android:id="@+id/navigation_loans"
        android:name="com.prometheo.moneylife.ui.loans.LoansFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_loans" />
</navigation>