<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.turn.TurnFragment">

    <TextView
        android:id="@+id/tvWeekNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:text="@string/tv_week_number"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeekNumber">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvIncomeExpenses"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvIncome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_income_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvIncomeAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_income_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_balance_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBalanceAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_balance_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvExpenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_expenses_title"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvExpensesAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/tv_expenses_amount"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvInvest"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@+id/cvFun"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvIncomeExpenses">

                <ImageView
                    android:id="@+id/ivInvest"
                    android:layout_width="76dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvInvest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/card_invest_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFun"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cvInvest"
                app:layout_constraintTop_toBottomOf="@+id/cvIncomeExpenses">

                <ImageView
                    android:id="@+id/ivFun"
                    android:layout_width="76dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvFun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/card_fun_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLaboral"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/cvPersonalProperty"
                app:layout_constraintTop_toBottomOf="@+id/cvFun">

                <ImageView
                    android:id="@+id/ivLaboral"
                    android:layout_width="76dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvLaboral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/card_laboral_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPersonalProperty"
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/cvLaboral"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvInvest">

                <ImageView
                    android:id="@+id/ivPersonalProperty"
                    android:layout_width="76dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvPersonalProperty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/card_personal_property_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabNextTurn"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="?android:attr/textCheckMark"
        android:text="@string/fab_next_turn_title"
        app:fabSize="auto"
        app:icon="?android:attr/textCheckMark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>